[package]
name = "learn_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework that focuses on ergonomics and modularity.
axum = "0.7.6"

# Modular reusable components for building robust clients and servers.
tower = "0.5.1"

# A fast and correct HTTP library.
hyper = { version = "1.4.1", features = ["full"] }

# Event-driven, non-blocking I/O platform.
tokio = { version = "1.40.0", features = ["full"] }

# A serialization/deserialization framework.
serde = { version = "1.0.210", features = ["derive"] }

# Serde serializion/deserialization of JSON data.
serde_json = { version = "1.0.128" }

# Single assignment cells and lazy values.
once_cell = "1.19.0"
